Adding Citus support and allowing runs against an existing postgresql cluster

--- a/hammerdb/hammerdb.env
+++ b/hammerdb/hammerdb.env
@@ -1,7 +1,20 @@
 #!/bin/bash
 
-export PG_COUNT_WARE="${PG_COUNT_WARE:-10}"
-export PG_DURATION="${PG_DURATION:-3}"
-export PG_RAMPUP="${PG_RAMPUP:-1}"
-export PG_NUM_VU="${PG_NUM_VU:-10}"
-export PG_VU="${PG_VU:-10}"
+# PostgreSQL and HammerDB configuration
+export PG_CONFIG="${PG_CONFIG}"
+export PGHOST="${PGHOST:-localhost}"
+export PGPORT="${PGPORT:-5432}"
+
+export PG_DBASE="${PG_DBASE:-postgres}"
+export PG_DEFAULTDBASE="${PG_DEFAULTDBASE:-postgres}"
+export PG_SUPERUSER="${PG_SUPERUSER:-virus}"
+export PG_USER="${PG_USER:-virus}"
+
+export PG_COUNT_WARE="${PG_COUNT_WARE:-20}"
+export PG_DURATION="${PG_DURATION:-5}"
+export PG_RAMPUP="${PG_RAMPUP:-2}"
+export PG_NUM_VU="${PG_NUM_VU:-20}"
+export PG_VU="${PG_VU:-20}"
+
+# Set a default data directory if we need to perform initdb
+export DATA_DIR_NAME="data.tpcc"
